--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Acerca de mi</a>
+                        <a class="nav-link" href="#">Inspiraciones</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Trabajos</a>
+                        <a class="nav-link" href="#">Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="#">Reservas</a>
                     </li>
 
                 </ul>
@@ -63,7 +63,7 @@
     </header>
 
 
-    <section id="Acerca-de-mi" class="container text-center my-5">
+    <section id="Inspiraciones" class="container text-center my-5">
 
 
         <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
@@ -173,7 +173,7 @@
 
     <section id="Contacto" class="container my-5">
 
-        <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
+        <h2 class="display-4 fw-bold text-center my-4">Reservas</h2>
 
         <p class="text-center my-4 d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
             Doloribus
@@ -213,7 +213,7 @@
 
 
     <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+        <p class="mb-0">Barbara Castro 2024. Todos los derechos reservados.</p>
     </footer>
 
 
