--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                     Sorprendete con los sabores que se esconden en el fin del mundo.
                 </p>
                 <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
-                    <button class="btn btn-lg btn-info text-light">Contacto</button>
+                    <button class="btn btn-lg btn-outline-info text-light me-4">Menu</button>
+                    <button class="btn btn-lg btn-info text-light">Reservas</button>
                 </div>
             </div>
         </div>
@@ -66,11 +66,10 @@
     <section id="Inspiraciones" class="container text-center my-5">
 
 
-        <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
+        <h2 class="display-3 fw-bold my-4">Inspiraciones</h2>
 
         <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
+            Conoce los elementos nativos y naturales que nos nutren para crear las mejores preparaciones conservando las raices nativas del fin del mundo
         </p>
 
 
