cambio de descripción de menu

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="row">
             <div class="col-12 col-md-4">
                 <i class="fas fa-camera fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
+                <h3 class="my-3 fw-bold">Mar</h3>
                 <p class="my-3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -86,7 +86,7 @@
             </div>
             <div class="col-12 col-md-4">
                 <i class="fas fa-bullhorn fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Crítica culinaria</h3>
+                <h3 class="my-3 fw-bold">Tierra</h3>
                 <p class="my-3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -96,7 +96,7 @@
             </div>
             <div class="col-12 col-md-4">
                 <i class="far fa-map fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
+                <h3 class="my-3 fw-bold">Aire</h3>
                 <p class="my-3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -110,7 +110,7 @@
 
     <section id="Mis-trabajos" class="my-5 p-5 bg-info">
 
-        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
+        <h2 class="display-4 fw-bold text-center text-light mb-3">Menu</h2>
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
@@ -119,14 +119,9 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Explicabo iure sint, perspiciatis distinctio molestias nihil
-                            repudiandae neque rem adipisci repellendus libero illo quo
-                            blanditiis, velit quasi ad, recusandae voluptates officia.
+                           Cordero de pastoreo libre de Magallanes, alimentado por pasto y cultivos sin fertilezantes.Horneado a fuego lento en leña de la zona, acompañado de hortalizas del huerto.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
-                            Ver más
-                        </button>
+
                     </div>
                 </div>
             </div>
@@ -136,14 +131,9 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                            consequatur quos error fuga excepturi quo. Laudantium optio
-                            pariatur laboriosam modi, ea molestias?
+                           Papas cosechadas en la Isla de Chiloe, que sorprende por sus multiples colores y sabores. Hornedas por 24 horas a fuego lento sobre piedras volcanicas
                         </p>
-                        <button type="button" class="btn btn-outline-info">
-                            Ver más
-                        </button>
+
                     </div>
                 </div>
             </div>
@@ -151,16 +141,10 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+                        <h5 class="card-title fw-bold">Salmones Libres</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                            corporis facilis qui architecto dolor, accusamus eveniet
-                            exercitationem fugit. Quod autem neque ducimus.
+                            Delicioso Salmon de la pesca del día por miembros de la comunidad Selknam. Preparados con infusiones de hierbas medicinales.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
-                            Ver más
-                        </button>
                     </div>
                 </div>
             </div>
